Add complet menu. Check layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="Jugar">Jugar</string>
     <string name="Instrucciones">Instrucciones</string>
     <string name="Ajustes">Ajustes</string>
-    <string name="Informacion">Información</string>
+    <string name="Informacion">Info</string>
     <string name="Nombredelprograma">Nombre del programa</string>
     <string name="Web">Web</string>
     <string name="Git">GitHub</string>
