--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
         <item>Silbato</item>
         <item>Balon</item>
     </string-array>
+    <string name="nav_draw_abrir">Abrir nav</string>
+    <string name="nav_draw_cerrar">Cerrar nav</string>
 </resources>
